# mesa

./: .gitignore  Cargo.toml
coordinator/: Cargo.toml  Dockerfile
coordinator/src/: actix_server.rs  main.rs  structs.rs  tonic_server.rs  worker_map.rs
distributed/: Cargo.toml
minikube/: coordinator_deployment.yaml  coordinator_svc.yaml  worker_deployment.yaml  worker_svc.yaml
protos/: register.proto
worker/: Cargo.toml  Dockerfile  build.rs
worker/protos/: register.proto
worker/src/: actix_server.rs  main.rs
