[package]
name = "coordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
crossfire = { version = "2.1.4", features = ["tokio"] }
datafusion = { version = "49.0.2", features = ["serde"] }
prost = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["serde", "tracing", "tracing-serde", "json"] }

[build-dependencies]
tonic-prost-build = "0.14.2"


[profile.release]
opt-level = 3
codegen-units = 1
lto=true
strip="symbols"
